added in set_manage into the readme